# security_sign

./: .envrc  .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  Readme.md  b.py  event.json  handler.py  pyproject.toml  requirements.txt  upload_file.json
.github/workflows/: action.yml
a/: ignores.yaml  security_template.yaml
data/: security_template.yaml
global_config/: global_ignore.yaml  ruleset.yaml  ruleset.yml
project_1/: ignores.yaml
project_10/: security_template.yaml
project_11/: ignores.yaml  security_template.yaml
project_13/: security_template.yaml
project_2/: ignores.yaml  security_template.yaml
project_3/: security_template.yaml
project_7/: ignores.yaml
report/: configuration.yaml  ignore.yaml
secOwn/: security_template.yml
src/: .envrc  .pylintrc  pyproject.toml  setup.cfg
