[tool.poetry]
name = "security_sign"
version = "0.1.0"
description = ""
authors = ["vikas <vikas.deep@globallogic.com>"]
readme = "README.md"
packages = [{include = "security_sign/handler.py"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
